src/test/compile-fail/bad-main.rs
// error-pattern:expected `extern fn(++v: ~[~str])

fn main(x: int) { }
